# GeneralGameEngine

./: .gitignore  CMakeLists.txt  Chess.cpp  Chess.hpp  ChessMove.cpp  ChessMove.hpp  ChessNN.cpp  ChessNN.hpp  ChessNN2.cpp  ChessNN2.hpp  ChessPiece.cpp  ChessPiece.hpp  Game.cpp  Game.hpp  LICENSE  MCTS.cpp  MCTS.hpp  Makefile  Move.cpp  Move.hpp  NN_MCTS.cpp  NN_MCTS.hpp  NetRunner.cpp  NetRunner.hpp  NetTrainer.cpp  NetTrainer.hpp  Node.cpp  Node.hpp  README.md  UCI.cpp  UCI.hpp  game-engine  main.cpp
